syntax = "proto3";

package spine.test.delivery;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.test.delivery";
option java_outer_classname = "DeliveryTestCommandsProto";
option java_multiple_files = true;

message AddNumber {
    option (is).java_type = "io.spine.server.delivery.given.CalculatorSignal";

    string calculator_id = 1;

    int32 value = 2;
}

message DCreateTask {
    string id = 1;
}
